# fleascope-rs

./: .gitignore  API_REDESIGN_SUMMARY.md  CALIBRATION_EXAMPLE_UPDATES.md  Cargo.toml  DATA_ACQUISITION_EXAMPLE_UPDATES.md  DEDUPLICATION_SUMMARY.md  FINAL_SUMMARY.md  PORTING_SUMMARY.md  README.md  UNIFIED_TRIGGER_SUMMARY.md
examples/: basic_connection.rs  calibration.rs  data_acquisition.rs  fast_read.rs
src/: flea_connector.rs  flea_scope.rs  lib.rs  serial_terminal.rs  trigger_config.rs
