[package]
name = "fleascope-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library to interact with a Fleascope"
homepage = "https://github.com/daniel-freiermuth/fleascope-rs"
repository = "https://github.com/daniel-freiermuth/fleascope-rs"
readme = "README.md"

[lib]
name = "fleascope_rs"
path = "src/lib.rs"

[features]
default = []
puffin = ["dep:puffin"]

[dependencies]
serialport = "4.0"
log = "0.4"
tracing = "0.1"
thiserror = "1.0"
polars = { version = "0.45", features = ["lazy", "csv", "strings"] }
puffin = { version = "0.19", optional = true }

[dev-dependencies]
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
