[package]
name = "fleascope-rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library to interact with a Fleascope"
homepage = "https://github.com/daniel-freiermuth/fleascope-rs"
repository = "https://github.com/daniel-freiermuth/fleascope-rs"
readme = "README.md"

[lib]
name = "fleascope_rs"
path = "src/lib.rs"

[features]
default = []
puffin = ["dep:puffin"]

[dependencies]
serialport = "4.0"
log = "0.4"
tracing = "0.1"
thiserror = "2.0"
polars = { version = "0.49", features = ["lazy", "csv", "strings"] }
puffin = { version = "0.19", optional = true }

[dev-dependencies]
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

# ====== BUILD PROFILES ======

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
# Optimized for cargo install and production use
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Single codegen unit for best optimization
panic = "abort"         # Faster execution
strip = true            # Remove debug symbols
overflow-checks = false # Faster math for data processing
debug = false

[profile.release-profile]
# For profiling in release mode
inherits = "release"
lto = "thin"            # Preserve call structure for profiling
debug = true            # Keep debug symbols
strip = false           # Keep symbols for stack traces
codegen-units = 4       # Balance optimization and symbols
panic = "unwind"        # Better error handling for profiling
