[package]
name = "fleascope-rs"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library to interact with a Fleascope"
homepage = "https://github.com/daniel-freiermuth/fleascope-rs"
repository = "https://github.com/daniel-freiermuth/fleascope-rs"
readme = "README.md"

[lib]
name = "fleascope_rs"
path = "src/lib.rs"

[features]
default = []
cpu-profiling = ["dep:tracy-client"]

[dependencies]
serialport = "4.8.1"
log = "0.4.29"
tracing = "0.1"
thiserror = "2.0.18"
polars = { version = "0.49", features = ["lazy", "csv", "strings"] }
tracy-client = { version = "0.18.4", optional = true, default-features = false }

[dev-dependencies]
env_logger = "0.11"
clap = { version = "4.5.56", features = ["derive"] }

# ====== BUILD PROFILES ======

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
# Optimized for cargo install and production use
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Single codegen unit for best optimization
panic = "abort"         # Faster execution
strip = true            # Remove debug symbols
overflow-checks = false # Faster math for data processing
debug = false

[profile.release-profile]
# For profiling in release mode
inherits = "release"
lto = "thin"            # Preserve call structure for profiling
debug = true            # Keep debug symbols
strip = false           # Keep symbols for stack traces
codegen-units = 4       # Balance optimization and symbols
panic = "unwind"        # Better error handling for profiling

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Lint groups with lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_arguments = "allow"

# Allow for now
cast_possible_truncation = "allow"

# Disable doc-related lints for now
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Deny critical issues
# unwrap_used = "deny"
# expect_used = "deny"
panic = "deny"
todo = "deny"
# indexing_slicing = "warn"
fallible_impl_from = "deny"